# pico-examples

pio/ir_nec/ir_loopback/: CMakeLists.txt  ir_loopback.c
pio/ir_nec/nec_receive_library/: nec_receive.pio
